--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6065152443242029"
+     crossorigin="anonymous"></script>
     <title>YT</title>
   </head>
   <body>
